Update landing page copy: 'Recruitment assistant for startups and agencies'

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
   <!-- Main message below the shader -->
   <div class="main-message">
-    <h1 class="hero-title">AI recruiter for startups and agencies</h1>
+    <h1 class="hero-title">Recruitment assistant for startups and agencies</h1>
   </div>
 
   <!-- Call-to-action button below the main message -->
