Update Cal.com sign-up link to correct URL: peoply-ai

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   </div>
 
   <!-- Call-to-action button below the main message -->
-  <a href="https://cal.com/aniket-dutta-fkqncs/peoply.ai" target="_blank" class="cta-button">SIGN UP FOR BETA</a>
+  <a href="https://cal.com/aniket-dutta-fkqncs/peoply-ai" target="_blank" class="cta-button">SIGN UP FOR BETA</a>
 
   <script>
     // Force HTTPS redirect
